--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Caleb Choi Resume">
+  <meta name="author" content="862134261">
 
-  <title>John Doe - Business Administration</title>
+  <title>Caleb Choi - Biology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Caleb Choi</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/calebchoi.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,40 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Caleb Choi
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Bioengineering📚</div>
+        <p class="lead mb-4">EMT<br><br>
 
-        Enter bio here<br><br>
+        Caleb Choi is a dedicated individual with a passion for bioengineering and healthcare. As a bioengineering major and aspiring physician, Caleb combines his technical knowledge with his desire to make a positive impact on people's lives. With a strong foundation in science and a compassionate heart, he has chosen to work as an Emergency Medical Technician (EMT) while preparing for medical school.
 
-        Enter bio here
+Born and raised in a small town, Caleb's fascination with science and technology began at an early age. He excelled in his high school science classes, particularly in biology and physics, where he discovered his innate curiosity for the human body and its intricate mechanisms. This interest led him to pursue a degree in bioengineering at the University of California Riverside.
+
+Throughout his academic journey, Caleb has consistently demonstrated his commitment to excellence. He has earned numerous accolades for his exceptional academic performance, including being on the Dean's List for multiple semesters. In addition to his academic pursuits, Caleb has actively engaged in research projects, focusing on biomedical devices and their potential applications in healthcare. He has contributed to groundbreaking studies in his field, collaborating with renowned professors and fellow researchers.
+
+However, Caleb's desire to directly impact patients' lives motivated him to gain hands-on experience in the healthcare field. To bridge the gap between his academic studies and real-world patient care, he obtained certification as an EMT. Working on the front lines of emergency medical services, Caleb has witnessed firsthand the critical role that immediate medical attention plays in saving lives.
+
+<br><br>
+
+        As an EMT, Caleb demonstrates remarkable composure and professionalism in high-stress situations. He is adept at quickly assessing patients' conditions and providing essential medical care with precision and compassion. Whether responding to a car accident or a medical emergency, Caleb remains calm and focused, ensuring that his patients receive the best possible care in their time of need. His ability to think critically and make sound decisions under pressure has earned him the trust and respect of his colleagues and superiors.
+
+While Caleb finds great fulfillment in his work as an EMT, he sees it as a stepping stone towards his ultimate goal of becoming a physician. Through his experiences in the field, he has gained a profound understanding of the impact that physicians have on individuals and communities. Caleb is inspired by the ability to diagnose and treat diseases, alleviate suffering, and provide holistic care to patients.
+
+In preparation for medical school, Caleb is actively involved in volunteer activities and shadowing opportunities. He spends his free time assisting at local clinics and participating in community health programs, deepening his understanding of the healthcare system and the challenges faced by underserved populations. These experiences have reinforced his commitment to pursuing a career in medicine and have fueled his desire to make a positive impact on healthcare accessibility and equity.
+
+With his unique blend of technical expertise, compassionate nature, and unwavering dedication, Caleb Smith is poised to make significant contributions to the field of medicine. His journey as a bioengineering major working as an EMT represents the synergy of his passion for science, his commitment to patient care, and his unwavering pursuit of excellence. As he continues to strive towards his dream of becoming a physician, Caleb is poised to make a lasting impact on the lives of countless individuals, improving healthcare outcomes and shaping the future of medicine.
         </p>
         <div class="social-icons">
           <a target="_blank" id="socialicon-1" href="https://linkedin.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/cchoi068">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/way2shlumped">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:cbelac5@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +106,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Research Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">UCR</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Conducted experiments and performed laboratory techniques related to molecular biology.<br> 
+              • Assisted in data analysis, interpretation, and documentation.<br>
+              • Expanded knowledge of molecular mechanisms underlying biological processes.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2020 - December 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Emergency Medical Technician (EMT)</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">FALCK</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Assessed patients' conditions and administered appropriate treatments and interventions.<br>
+              • Collaborated with a team of healthcare professionals to ensure efficient and coordinated patient care.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">December 2022 - Present</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Volunteer at a Free Clinic</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Emergency Medical</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Conducted patient intake procedures, including medical history documentation.<br>
+            • Participated in basic medical screenings, such as measuring vital signs and performing simple diagnostic tests.<br>
+            • Gained understanding of healthcare disparities and the challenges faced by marginalized communities.<br>
+            • Collaborated with a diverse healthcare team to ensure comprehensive patient care.<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">March 2023 - Present</span>
           </div>
         </div>
 
@@ -152,33 +166,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors in Biological Sciences</div>
+            <div>BS in Biology</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2019 - June 2023</span>
           </div>
         </div>
 
@@ -191,7 +183,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/FALCK.jpg" width="500px">
+            <img src="img/research.jpg" width="500px"><br>
+            <img src="img/wod.jpg" width="500px">
+            <img src="img/clinic.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +194,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Caleb Choi</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
